<resources>
    <string name="app_name">vRAC Companion</string>
    <!-- Strings related to login -->
    <string name="prompt_password">API Token</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="action_options">Options</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="blueprints_tab">Catalog</string>
    <string name="deployments_tab">Deployments</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings_button_desc">Settings Button</string>
    <string name="blueprints_click_icon">\></string>
    <string name="option_log_out">Log Out</string>
    <string name="vertical_ellipsis_desc">Vertical ellipsis for more options</string>
    <string name="options_apply_changes">Apply Changes</string>
    <string name="csp_login_button">Log in with Username / Password</string>
    <string name="api_login_button">Log in with api token</string>
    <string name="login_error">There was an error during login:</string>
    <string name="login_error_general">Cloud Companion was unable to log into CAS services. Try again:</string>

    <string name="missing_token_error">Failed to authenticate. Try again with username/password or use an API token.</string>
    <string name="org_access_error">You don\'t have access to Service Broker or Cloud Assembly on your default organization. Log in with an API token for an organization where you have access or change your default organization on desktop.</string>
    <string name="org_unconfirmed_error">Failed to confirm your default organization to finish logging in. Try again with username/password or use an API token.</string>
    <string name="loading_failure_error">Failed to connect with Cloud Automation Services. Check your internet connection and attempt to log in again.</string>
    <string name="general_login_error">Failed to log in. Try again with username/password or use an API token.</string>
    <string name="token_login_error">Failed to authenticate. Try again or use a different API token.</string>
    <string name="token_auth_error">Failed to authenticate. Verify that your API token is for an organization where you have access to Cloud Assembly and/or Service Broker. Try again or use a different API token.</string>

    <string name="power_on_button">Power On</string>
    <string name="power_off_button">Power Off</string>
    <string name="delete_deployment_button">Delete</string>
    <string name="change_lease_button">Change Lease</string>
    <string name="cancel_button">Cancel</string>
    <string name="day_two_actions">Day 2 Actions</string>

    <string name="card_details_arrow">Arrow indicating card can be clicked</string>

    <string name="contact_dev">Contact the Dev Team</string>
    <string name="options">Options</string>

    <string name="base_url_shared_property_name">base_url</string>
    <string name="base_url_english_name">Endpoint Base URL</string>

    <string name="catalog_source_property_name">catalog_source</string>
    <string name="login_source_property_name">login_source</string>

    <string name="catalog_source_text">Only source published catalog items</string>

    <string name="base_url">https://api.mgmt.cloud.vmware.com</string>
    <string name="mgmt_url">https://www.mgmt.cloud.vmware.com/catalog/#/library</string>
    <string name="csp_host_url">https://console.cloud.vmware.com</string>
    <string name="login_uri">/iaas/api/login</string>
    <string name="blueprints_uri">/blueprint/api/blueprints?size=1000</string>
    <string name="default_org_uri">/csp/gateway/am/api/loggedin/user/default-org</string>
    <string name="user_orgs_uri">/csp/gateway/am/api/loggedin/user/orgs</string>
    <string name="catalog_uri">/catalog/api/items?size=1000</string>
    <string name="deployments_uri">/deployment/api/deployments?expand=resources,lastRequest</string>
    <string name="bp_request_uri">/blueprint/api/blueprint-requests</string>
    <string name="deployments_base_uri">/deployment/api/deployments/</string>
    <string name="expanded_details">There was an issue displaying additional details</string>
</resources>
