<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/option_contact_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="true"
        android:title="@string/contact_dev"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="true"
        android:title="@string/options"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/option_log_out_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="true"
        android:title="@string/option_log_out"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="Search"
        app:showAsAction="ifRoom|withText"
        app:actionViewClass="android.widget.SearchView" />
</menu>