<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginErrorActivity">

    <ImageView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/warning" />

    <TextView
        android:id="@+id/mainmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_error"
        android:textStyle="bold"
        android:layout_marginTop="320dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/details"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="230dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/login_error_general"
        app:layout_constraintBottom_toTopOf="@+id/csplogin"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="47dp" />

    <Button
        android:id="@+id/csplogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csp_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/details"
        app:layout_constraintStart_toStartOf="@+id/details"
        app:layout_constraintTop_toBottomOf="@+id/details"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/apilogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/csplogin"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>